istio-argocd-istiocontroller-gatewayapi/bookinfo/httproute-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookinfo
  namespace: argocd

spec:
  parentRefs:
  - name: bookinfo-gateway
    namespace: default

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /argocd
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /argocd

    backendRefs:
    - name: argocd-server
      port: 80
